# pokedecks

./: .gitignore  README.md  config.py  pyproject.toml
.github/workflows/: update-snapshot.yml
data/: cards_cache.json  progress.json
data/warehouse/: pokemon_prices_2026-05.parquet
frontend/: README.md  analysis_app.py  collection_app.py  ui.py
pipeline/: __init__.py
pipeline/1_acquisition/: README.md  run.py
pipeline/2_preprocess/: README.md  run.py
pipeline/2_preprocess/modules/: build_record.py
pipeline/3_enrichment/: README.md  run.py
pipeline/3_enrichment/modules/: scrape.py
pipeline/4_postprocess/: README.md  run.py
pipeline/4_postprocess/modules/: normalize.py
pipeline/5_storing/: README.md  run.py
pipeline/5_storing/modules/: db.py  (+1 more)
pipeline/6_quality/: README.md  run.py
pipeline/7_analysis/: README.md  run.py
pipeline/acquisition/: run.py
pipeline/analysis/: run.py
pipeline/cleaning/: README.md  run.py
pipeline/enrichment/: README.md  run.py
pipeline/processing/: README.md  run.py
pipeline/quality/: README.md  run.py
pipeline/storing/: README.md  run.py
scripts/: README.md  benchmark_acq_proc_enr.py  benchmark_enrichment.py  download_snapshots.ps1  download_snapshots.sh  publish-snapshot.sh  setup.ps1  setup.sh
scripts/app/: open_collection.ps1  open_collection.sh  open_report.ps1  open_report.sh
scripts/pipeline/: analyze.py  quality.py  run.py
scripts/tools/: download_snapshots.ps1  download_snapshots.py  download_snapshots.sh  publish-snapshot.sh  query_examples.py
util/: query.py  user_card_collection.py
(+11 files in other folders)
